chamber color contrast correction and js

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -16,7 +16,7 @@ h1 h2 {
 header {
     background-color: #28a745b3;
     color: #000000;
-
+    padding: 0.2rem;
 }
 
 header nav {
@@ -30,9 +30,7 @@ header nav {
 
 h1 {
     margin: 0;
-    /* color: #007bffe6; */
     color: #000000;
-    /* Primary color for headings */
 }
 
 #hero-img {
@@ -40,10 +38,7 @@ h1 {
 }
 
 /* Navigation styles */
-nav {
-    /* It Hides the navigation menu by default */
-    display: none;
-}
+
 
 nav ul {
     list-style-type: none;
@@ -52,13 +47,12 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display: none;
     margin-right: 20px;
 }
 
 nav ul li a {
     color: #000000;
-    /* White text color */
     text-decoration: none;
 }
 
@@ -108,8 +102,6 @@ nav ul li a {
     display: block;
 }
 
-
-
 /* CSS for the open class */
 #myButton.open::before {
     content: "X";
@@ -129,5 +121,5 @@ footer {
 }
 
 footer #lastModified {
-    color: yellow;
+    color: #bc4749;
 }
